apps/moneymoney-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moneymoney-front
  namespace: haenu
  labels:
    app: moneymoney-front
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: moneymoney-front
